--- a/templates/arcturus/template.php.erb
+++ b/templates/arcturus/template.php.erb
@@ -1,20 +1,23 @@
 <% project_name = File.basename(Compass.configuration.project_path) %><% project_js = Compass.configuration.javascripts_dir %><% project_css = Compass.configuration.css_dir %><?php
 
 /**
+ * @file
+ * Theme functions for the <%= project_name %> theme.
+ */
+
+/**
  * Override or insert variables into the maintenance page template.
  *
- * @param $vars
+ * @param (array) $vars
  *   An array of variables to pass to the theme template.
- * @param $hook
- *   The name of the template being rendered ("maintenance_page" in this case.)
  */
-function <%= project_name %>_preprocess_maintenance_page(&$vars, $hook) {
+function <%= project_name %>_preprocess_maintenance_page(&$vars) {
   // When a variable is manipulated or added in preprocess_html or
   // preprocess_page, that same work is probably needed for the maintenance page
   // as well, so we can just re-use those functions to do that work here.
   // <%= project_name %>_preprocess_html($variables, $hook);
   // <%= project_name %>_preprocess_page($variables, $hook);
-
+  //
   // This preprocessor will also be used if the db is inactive. To ensure your
   // theme is used, add the following line to your settings.php file:
   // $conf['maintenance_theme'] = '<%= project_name %>';
@@ -24,91 +27,82 @@ function <%= project_name %>_preprocess_maintenance_page(&$vars, $hook) {
 /**
  * Implements hook_modernizr_load_alter().
  *
- * @return
+ * @return (array)
  *   An array to be output as yepnope testObjects.
  */
 /* -- Delete this line if you want to use this function
 function <%= project_name %>_modernizr_load_alter(&$load) {
 
 }
+*/
 
 /**
  * Implements hook_preprocess_html()
  *
- * @param $vars
+ * @param (array) $vars
  *   An array of variables to pass to the theme template.
- * @param $hook
- *   The name of the template being rendered ("html" in this case.)
  */
 /* -- Delete this line if you want to use this function
 function <%= project_name %>_preprocess_html(&$vars) {
 
 }
+*/
 
 /**
  * Override or insert variables into the page template.
  *
- * @param $vars
+ * @param (array) $vars
  *   An array of variables to pass to the theme template.
- * @param $hook
- *   The name of the template being rendered ("page" in this case.)
  */
 /* -- Delete this line if you want to use this function
 function <%= project_name %>_preprocess_page(&$vars) {
 
 }
+*/
 
 /**
  * Override or insert variables into the region templates.
  *
- * @param $vars
+ * @param (array) $vars
  *   An array of variables to pass to the theme template.
- * @param $hook
- *   The name of the template being rendered ("region" in this case.)
  */
 /* -- Delete this line if you want to use this function
-function <%= project_name %>_preprocess_region(&$vars, $hook) {
+function <%= project_name %>_preprocess_region(&$vars) {
 
 }
-// */
+*/
 
 /**
  * Override or insert variables into the block templates.
  *
- * @param $vars
+ * @param (array) $vars
  *   An array of variables to pass to the theme template.
- * @param $hook
- *   The name of the template being rendered ("block" in this case.)
  */
 /* -- Delete this line if you want to use this function
-function <%= project_name %>_preprocess_block(&$vars, $hook) {
+function <%= project_name %>_preprocess_block(&$vars) {
 
 }
-// */
+*/
 
 /**
  * Override or insert variables into the entity template.
  *
- * @param $vars
+ * @param (array) $vars
  *   An array of variables to pass to the theme template.
- * @param $hook
- *   The name of the template being rendered ("entity" in this case.)
  */
 /* -- Delete this line if you want to use this function
-function <%= project_name %>_preprocess_entity(&$vars, $hook) {
+function <%= project_name %>_preprocess_entity(&$vars) {
 
 }
-// */
+*/
 
 /**
  * Override or insert variables into the node template.
  *
- * @param $vars
+ * @param (array) $vars
  *   An array of variables to pass to the theme template.
- * @param $hook
- *   The name of the template being rendered ("node" in this case.)
  */
-function <%= project_name %>_preprocess_node(&$vars, $hook) {
+function <%= project_name %>_preprocess_node(&$vars) {
   $node = $vars['node'];
 
   // Node listings should be heading 2.
@@ -124,64 +118,60 @@ function <%= project_name %>_preprocess_node(&$vars, $hook) {
 /**
  * Override or insert variables into the field template.
  *
- * @param $vars
+ * @param (array) $vars
  *   An array of variables to pass to the theme template.
- * @param $hook
- *   The name of the template being rendered ("field" in this case.)
  */
 /* -- Delete this line if you want to use this function
-function <%= project_name %>_preprocess_field(&$vars, $hook) {
+function <%= project_name %>_preprocess_field(&$vars) {
 
 }
-// */
+*/
 
 /**
  * Override or insert variables into the comment template.
  *
- * @param $vars
+ * @param (array) $vars
  *   An array of variables to pass to the theme template.
- * @param $hook
- *   The name of the template being rendered ("comment" in this case.)
  */
 /* -- Delete this line if you want to use this function
-function <%= project_name %>_preprocess_comment(&$vars, $hook) {
+function <%= project_name %>_preprocess_comment(&$vars) {
   $comment = $vars['comment'];
 }
-// */
+*/
 
 /**
  * Override or insert variables into the views template.
  *
- * @param $vars
+ * @param (array) $vars
  *   An array of variables to pass to the theme template.
  */
 /* -- Delete this line if you want to use this function
 function <%= project_name %>_preprocess_views_view(&$vars) {
   $view = $vars['view'];
 }
-// */
+*/
 
 
 /**
  * Override or insert css on the site.
  *
- * @param $css
+ * @param (array) $css
  *   An array of all CSS items being requested on the page.
  */
 /* -- Delete this line if you want to use this function
 function <%= project_name %>_css_alter(&$css) {
 
 }
-// */
+*/
 
 /**
  * Override or insert javascript on the site.
  *
- * @param $js
+ * @param (array) $js
  *   An array of all JavaScript being presented on the page.
  */
 /* -- Delete this line if you want to use this function
 function <%= project_name %>_js_alter(&$js) {
 
 }
-// */
+*/
