--- a/templates/shared/config.rb.erb
+++ b/templates/shared/config.rb.erb
@@ -1,5 +1,5 @@
 <% project_name = File.basename(Compass.configuration.project_path) %><% project_js = Compass.configuration.javascripts_dir %><% project_css = Compass.configuration.css_dir %><% project_sass = Compass.configuration.sass_dir %><% project_img = Compass.configuration.images_dir %><% project_fonts = Compass.configuration.fonts_dir %># Require any additional compass plugins here.
-require 'aurora'
+require 'aurora-os'
 
 # Set this to the root of your project when deployed:
 http_path = "/sites/all/themes/<%= project_name %>"
