Add placeholder layouts for bedrock grid imports.

--- a/templates/arcturus/partials/layouts/_layouts.scss
+++ b/templates/arcturus/partials/layouts/_layouts.scss
@@ -1,6 +1,22 @@
-////////////////////////
+////////////////////////////////////////////////////////////////////////////////
 // Layouts Partials
 //
 // Your SMACSS Layouts go here
-// Build sub folders and partials in this folder, with everything being imported, in cascading order, into this file.
+// Build sub folders and partials in this folder, with everything
+// being imported, in cascading order, into this file.
+////////////////////////////////////////////////////////////////////////////////
+
 ////////////////////////
+// Bedrock Grid Imports
+////////////////////////
+//@import 'adakite/adakite';
+//@import 'andesite/andesite';
+//@import 'basalt/basalt';
+//@import 'coal/coal';
+//@import 'flint/flint';
+//@import 'granite/granite';
+//@import 'hawaiite/hawaiite';
+//@import 'obsidian/obsidian';
+//@import 'pumice/pumice';
+//@import 'quartz/quartz';
+//@import 'variolite/variolite';
