Un-placeholderify bedrock default layouts.
Note that this injects a dependency on the bedrock module

--- a/templates/arcturus/partials/layouts/_layouts.scss
+++ b/templates/arcturus/partials/layouts/_layouts.scss
@@ -9,14 +9,14 @@
 ////////////////////////
 // Bedrock Grid Imports
 ////////////////////////
-//@import 'adakite/adakite';
-//@import 'andesite/andesite';
-//@import 'basalt/basalt';
-//@import 'coal/coal';
-//@import 'flint/flint';
-//@import 'granite/granite';
-//@import 'hawaiite/hawaiite';
-//@import 'obsidian/obsidian';
-//@import 'pumice/pumice';
-//@import 'quartz/quartz';
-//@import 'variolite/variolite';
+@import 'adakite/adakite';
+@import 'andesite/andesite';
+@import 'basalt/basalt';
+@import 'coal/coal';
+@import 'flint/flint';
+@import 'granite/granite';
+@import 'hawaiite/hawaiite';
+@import 'obsidian/obsidian';
+@import 'pumice/pumice';
+@import 'quartz/quartz';
+@import 'variolite/variolite';
