--- a/templates/arcturus/style.scss
+++ b/templates/arcturus/style.scss
@@ -16,6 +16,11 @@ $legacy-support-for-ie8: true;
 $legacy-support-for-mozilla: false;
 
 ////////////////////////
+// OS Alphecca Import
+////////////////////////
+@import '../vendor/alphecca/sass/styleguide';
+
+////////////////////////
 // Base Import
 ////////////////////////
 @import 'partials/global/base';
