--- a/templates/arcturus/arcturus.info.erb
+++ b/templates/arcturus/arcturus.info.erb
@@ -1,5 +1,5 @@
-<% project_name = File.basename(Compass.configuration.project_path) %><% project_js = Compass.configuration.javascripts_dir %><% project_css = Compass.configuration.css_dir %>name =  <%= project_name %>
-description =  <%= project_name %> theme based on the Aurora base theme.
+<% project_name = File.basename(Compass.configuration.project_path) %><% project_js = Compass.configuration.javascripts_dir %><% project_css = Compass.configuration.css_dir %>name =  <%= project_name.capitalize %>
+description =  <%= project_name.capitalize %> theme based on the Aurora base theme.
 core = 7.x
 base theme = aurora
 
