--- a/templates/arcturus/template.php.erb
+++ b/templates/arcturus/template.php.erb
@@ -184,3 +184,23 @@ function <%= project_name %>_js_alter(&$js) {
 
 }
 */
+
+/**
+ * Returns HTML for a breadcrumb trail.
+ *
+ * @param (array) $variables
+ *   An associative array containing:
+ *   - breadcrumb: An array containing the breadcrumb links.
+ */
+function <% project_name %>_breadcrumb($variables) {
+  $breadcrumb = $variables['breadcrumb'];
+
+  if (!empty($breadcrumb)) {
+    // Provide a navigational heading to give context for breadcrumb links to
+    // screen-reader users. Make the heading invisible with .element-invisible.
+    $output = '<h2 class="element-invisible">' . t('You are here') . '</h2>';
+
+    $output .= '<div class="breadcrumb">' . implode('', $breadcrumb) . '</div>';
+    return $output;
+  }
+}
