Update alphecca import.

--- a/templates/arcturus/style.scss
+++ b/templates/arcturus/style.scss
@@ -16,9 +16,9 @@ $legacy-support-for-ie8: true;
 $legacy-support-for-mozilla: false;
 
 ////////////////////////
-// OS Alphecca Import
+// Alphecca Style Import
 ////////////////////////
-@import '../vendor/alphecca/sass/styleguide';
+@import '../vendor/alphecca/sass/alphecca-style';
 
 ////////////////////////
 // Base Import
