--- a/templates/arcturus/partials/styleguide/_style-guide.scss
+++ b/templates/arcturus/partials/styleguide/_style-guide.scss
@@ -16,4 +16,4 @@
 //  If you'd prefer a soft reset, uncomment `normalize`
 //////////////////////////////
 // @import 'compass/reset';
-// @import 'normalize';
+@import 'normalize';
