Move alphecca import to style guide.

--- a/templates/arcturus/partials/styleguide/_style-guide.scss
+++ b/templates/arcturus/partials/styleguide/_style-guide.scss
@@ -17,3 +17,8 @@
 //////////////////////////////
 // @import 'compass/reset';
 @import 'normalize';
+
+////////////////////////
+// Alphecca Style Import
+////////////////////////
+@import '../vendor/alphecca/sass/alphecca-style';
