Comment coding standards.

--- a/templates/arcturus/partials/styleguide/_style-guide.scss
+++ b/templates/arcturus/partials/styleguide/_style-guide.scss
@@ -1,11 +1,13 @@
-////////////////////////
+////////////////////////////////////////////////////////////////////////////////
 // Style Guide Partials
 //
 // Your Style Guide
-// Build sub folders and partials in this folder, with everything being imported, in cascading order, into this file.
+// Build sub folders and partials in this folder,
+// with everything being imported, in cascading order, into this file.
 //
-// All Style Guide selectors should go in here, regardless of layout or design (but separating the two in here is a good idea).
-////////////////////////
+// All Style Guide selectors should go in here, regardless of layout
+// or design (but separating the two in here is a good idea).
+////////////////////////////////////////////////////////////////////////////////
 
 
 //////////////////////////////
