--- a/templates/arcturus/partials/modules/_modules.scss
+++ b/templates/arcturus/partials/modules/_modules.scss
@@ -1,6 +1,7 @@
-////////////////////////
+////////////////////////////////////////////////////////////////////////////////
 // Module Partials
 //
 // Your SMACSS Modules go here
-// Build sub folders and partials in this folder, with everything being imported, in cascading order, into this file.
-////////////////////////
+// Build sub folders and partials in this folder,
+// imported, in cascading order, into this file.
+////////////////////////////////////////////////////////////////////////////////
