--- a/templates/arcturus/template.php.erb
+++ b/templates/arcturus/template.php.erb
@@ -204,3 +204,39 @@ function <% project_name %>_breadcrumb($variables) {
     return $output;
   }
 }
+
+/**
+ * Returns HTML to wrap child elements in a container.
+ *
+ * Used for grouped form items. Can also be used as a #theme_wrapper for any
+ * renderable element, to surround it with a <div> and add attributes such as
+ * classes or an HTML id.
+ *
+ * @param $variables
+ *   An associative array containing:
+ *   - element: An associative array containing the properties of the element.
+ *     Properties used: #id, #attributes, #children.
+ *
+ * @ingroup themeable
+ */
+function <% project_name %>_container($variables) {
+  $element = $variables['element'];
+
+  // Special handling for form elements.
+  if (isset($element['#array_parents'])) {
+    // Assign an html ID.
+    if (!isset($element['#attributes']['id'])) {
+      $element['#attributes']['id'] = $element['#id'];
+    }
+    // Add the 'form-wrapper' class.
+    $element['#attributes']['class'][] = 'form-wrapper';
+
+    // Add the 'button-group' & 'radius' classes to form actions.
+    if ($element['#id'] == 'edit-actions') {
+      $element['#attributes']['class'][] = 'button-group';
+      $element['#attributes']['class'][] = 'radius';
+    }
+  }
+
+  return '<div' . drupal_attributes($element['#attributes']) . '>' . $element['#children'] . '</div>';
+}
