Comment coding standards.

--- a/templates/arcturus/template.php.erb
+++ b/templates/arcturus/template.php.erb
@@ -212,7 +212,7 @@ function <% project_name %>_breadcrumb($variables) {
  * renderable element, to surround it with a <div> and add attributes such as
  * classes or an HTML id.
  *
- * @param $variables
+ * @param (array) $variables
  *   An associative array containing:
  *   - element: An associative array containing the properties of the element.
  *     Properties used: #id, #attributes, #children.
