Clarify comment for enabling orbit slider.

--- a/templates/arcturus/template.php.erb
+++ b/templates/arcturus/template.php.erb
@@ -117,7 +117,7 @@ function <%= project_name %>_preprocess_node(&$vars) {
  */
 function <%= project_name %>_preprocess_field(&$vars) {
 
-  /* Delete this to enable the Foundation Orbit slider.
+  /* Uncomment this to enable the Foundation Orbit slider.
   $element = $vars['element'];
   switch ($element['#field_name']) {
     case 'field_slideshow_slide':
