Alphecca ON by default.

--- a/templates/arcturus/partials/styleguide/_style-guide.scss
+++ b/templates/arcturus/partials/styleguide/_style-guide.scss
@@ -23,4 +23,4 @@
 ////////////////////////
 // Alphecca Style Import
 ////////////////////////
-//@import '../vendor/alphecca/sass/alphecca-style';
+@import '../vendor/alphecca/sass/alphecca-style';
