added trailing comma in array

--- a/templates/arcturus/template.php.erb
+++ b/templates/arcturus/template.php.erb
@@ -125,7 +125,7 @@ function <%= project_name %>_preprocess_field(&$vars) {
       drupal_add_js('jQuery(document).foundation();', array(
         'type' => 'inline',
         'scope' => 'footer',
-        'weight' => 10
+        'weight' => 10,
       ));
       break;
   }
