--- a/templates/shared/config.rb.erb
+++ b/templates/shared/config.rb.erb
@@ -4,6 +4,7 @@ require 'singularitygs'
 require 'breakpoint'
 require 'toolkit'
 require 'compass-normalize'
+require 'aurora-os'
 
 # Set this to the root of your project when deployed:
 http_path = "/sites/all/themes/<%= project_name %>"
