Capitalize theme name in template.php comments.

--- a/templates/arcturus/template.php.erb
+++ b/templates/arcturus/template.php.erb
@@ -2,7 +2,7 @@
 
 /**
  * @file
- * Theme functions for the <%= project_name %> theme.
+ * Theme functions for the <%= project_name.capitalize %> theme.
  */
 
 
